media element added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,81 @@
 	<title>html5</title>
 </head>
 <body>
+<center>
+	<h1>Introduction</h1>
+<p>
+was published i october 2014 by the world wide web consortium(W#C)
+<br />
+is the lates and most enhanced version of html
+<br />
+is a standard for structuring and presening content on the world wide web
+<br />
+ensures backward compatibility
+</p></center>
+<hr>
+<h1>New Features</h1>
+
+<ul>
+	<li>New Semantics</li>
+	<li>Canvas</li>
+	<li>Geolocation</li>
+	<li>Microdata</li>
+	<li>Web Storage</li>
+	<li>Web Messaging</li>
+	<li>IndexedDB</li>
+	<li>Multimedia</li>
+</ul>
+
+<div style="float: inherit;">
+<h2>Meida Element</h2>
+<hr>
+<div style="border:5px solid red; float: left; width: 40%;"><h3 align="center">This is html style</h3>
+<embed src="media/video.mp4" height="200px" width="400px">
+	<noembed>Media element is not supported by your browser
+	</noembed>
+</embed>
+<br><br>
+<embed src="media/audio.mp3">
+<noembed>Media element is not supported by your browser</noembed>
+</embed>
+</div>
+
+<br><br>
+
+<div style="border: 5px solid green; float: right; width: 40%;"> <h3 align="center">This is Html5 Style</h3>
+<video width="400px" height="200px" controls>
+	<source src="media/video.ogg" type="video/ogg" />
+	<source src="media/video.mp4" type="video/mp4" />
+	Your browser does not support the video element
+</video>
+
+<br><br>
+
+<audio controls>
+	<source src="media/audio.mp3" type="audio/ogg" />
+	<source src="media/audio.wav" type="audio/wav" />
+	<source src="media/audio.mp3" type="audio/mp3" />
+	Your browser does not support the audio element
+</audio>
+
+</div>
+</div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<hr>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
