--- a/index.html
+++ b/index.html
@@ -67,7 +67,19 @@ ensures backward compatibility
 </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
+<div>
+<h2>Microdata</h2>
+- is a WHATWG HTML specification used to nest metadata existing content on web pages
+- search engines, web crawlers and browsers can exact and process microdata
+- extracted info is used to provide a richer browsing experience for users.
 
+
+<!-- example -->
+
+<div itemscope>
+	<p>My name is: <span itepprop="name">Rabi Krishna Yadav</span>. I live in <span itemprop="city">Janakpur</span>, <span itemprop="country">Nepal</span></p>
+</div>
+</div>
 
 
 
