--- a/index.html
+++ b/index.html
@@ -133,6 +133,45 @@ ensures backward compatibility
 </footer>
 
 </div>
+<hr>
+<div>	
+<h2>MathML</h2>
+<dl>
+	<dt>MathML</dt>
+	<dd>
+		<ul>
+			<li>MathML stands for Mathmatical Markup Language</li>
+			<li>Used for describing mathmatical notations</li>
+			<li>Captures the structure and the content</li>
+			<li>Helps in integrating mathematical formulae with WWW.</li>
+		</ul>
+	</dd>
+</dl>
+
+<h4>Example</h4>
+
+<math xmlns="https://www.w3.org.1998/Math/MathML">
+	<mrow>
+		<mi>A</mi> <!-- mi for integer value -->
+		<mo>=</mo> <!-- mo for operator -->
+		<mfenced open="[" close="]">
+			<mtable>
+				<mtr>
+					<mtd><mi>x</mi></mtd>
+					<mtd><mi>y</mi></mtd>
+				</mtr>
+				<mtr>
+					<mtd><mi>a</mi></mtd>
+					<mtd><mi>b</mi></mtd>
+				</mtr>
+			</mtable>
+		</mfenced>
+	</mrow>
+</math>
+<br />
+<mark>this function is not supportingin chrome browser just use firefox for correct result</mark>
+
+</div>
 
 
 
