--- a/index.html
+++ b/index.html
@@ -173,6 +173,52 @@ ensures backward compatibility
 
 </div>
 
+<hr>
+
+<div><center>
+	<h2>Web form2.0</h2>
+	<form>
+		<table>
+			<tr>
+				<td>Date and Time:</td>
+				<td><input type="datetime-local" name="datetime"></td>
+			</tr>
+			<tr>
+				<td>Date:</td>
+				<td><input type="date" name="date"></td>
+			</tr>
+			<tr>
+				<td>Month</td>
+				<td><input type="Month" name="month"></td>
+			</tr>
+			<tr>
+				<td>Week:</td>
+				<td><input type="Week" name=""Week></td>
+			</tr>
+			<tr>
+				<td>Time:</td>
+				<td><input type="time" name="time"></td>
+			</tr>
+			<tr>
+				<td>Number : </td>
+				<td><input type="Number" name="number" min="0" max="10" step="1" value="5"></td>
+			</tr>
+			<tr>
+				<td>Range : </td>
+				<td><input type="range" name="range" min="0" max="10" step="1" value="5"></td>
+			</tr>
+			<tr>
+				<td>Email : </td>
+				<td><input type="email" name="email" placeholder="enter your email id"></td>
+			</tr>
+			<tr>
+				<td><input type="submit" name="submit"></td>
+			</tr>
+		</table>
+	</form>
+</center>
+</div>
+
 
 
 
